@@ -13,5 +13,5 @@
 1.3.6.1.2.1.2.2.1.2.1 1.3.6.1.2.1.2.2.1.2.2 1.3.6.1.2.1.2.2.1.2.2
 
 # allow some tcpConnTable branches for local routes
-1.3.6.1.2.1.6.13.1.1.127.0.0.255.65535 1.3.6.1.2.1.6.13.1.1.127.0.0.1.0 1.3.6.1.2.1.6.13.1.1.127.0.0.1.65535
-1.3.6.1.2.1.6.13.1.2.127.0.0.255.65535 1.3.6.1.2.1.6.13.1.2.127.0.0.1.0 1.3.6.1.2.1.6.13.1.2.127.0.0.1.65535
+1.3.6.1.2.1.6.13.1.1.127.0.0.0.65535 1.3.6.1.2.1.6.13.1.1.127.0.0.1.0 1.3.6.1.2.1.6.13.1.1.127.0.0.1.65535
+1.3.6.1.2.1.6.13.1.2.127.0.0.0.65535 1.3.6.1.2.1.6.13.1.2.127.0.0.1.0 1.3.6.1.2.1.6.13.1.2.127.0.0.1.65535
